--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,86 @@
-# This is a basic workflow to help you get started with Actions
+name: Deploy to Server
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+permissions:
+  packages: write
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  commit-hash:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    outputs:
+      commit_hash: ${{ steps.get_commit.outputs.commit_hash }}
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
+      - name: Get commit hash
+        id: get_commit
+        run: echo "::set-output name=commit_hash::$(git rev-parse HEAD)"
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+  build-and-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm test
+      - name: Build
+        run: npm run build
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+  build-and-push-image:
+    needs:
+      - build-and-test
+      - commit-hash
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set short git commit SHA
+        id: vars
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          calculatedSha=$(git rev-parse --short ${{ github.sha }})
+          echo "COMMIT_SHORT_SHA=$calculatedSha" >> $GITHUB_ENV
+
+      - name: Log in to Container registry
+        uses: docker/login-action@v3        
+        with:
+          registry: https://ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository }}:${{ needs.commit-hash.outputs.commit_hash }}
+
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - build-and-push-image
+  #     - commit-hash
+
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v2
+  #   - name: create env file
+  #     run: |
+  #       echo "GIT_COMMIT_HASH=${{ github.sha }}" >> env
+  #   - name: 'Docker Stack Deploy'
+  #     uses: cssnr/stack-deploy-action@v1
+  #     with:
+  #       name: 'guestbook'
+  #       file: 'docker-stack.yaml'
+  #       host: zenful.cloud
+  #       user: deploytest
+  #       ssh_key: ${{ secrets.DEPLOY_SSH_KEY }}
+  #       env_file: './env'
