--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,7 +34,7 @@ jobs:
 
   build-and-push-image:
     needs:
-      - build-and-test
+      # - build-and-test
       - commit-hash
     runs-on: ubuntu-24.04
     steps:
