--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: echo result
         env:
-          commit_hash: ${{ steps.get_commit.outputs.commit_hash }}
+          commit_hash: ${{ needs.commit-hash.outputs.commit_hash }}
         run: echo "The commit hash is $commit_hash"
 
       # - name: Build and push Docker image
