--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ jobs:
   commit-hash:
     runs-on: ubuntu-24.04
     outputs:
-      handle: ${{ steps.get_commit.outputs.commit_hash }}
+      commit_hash: ${{ steps.get_commit.outputs.commit_hash }}
     steps:
       - uses: actions/checkout@v4
       - name: Get commit hash
