--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,15 +9,15 @@ permissions:
   packages: write
 
 jobs:
-  commit-hash:
-    runs-on: ubuntu-24.04
-    outputs:
-      commit_hash: ${{ steps.get_commit.outputs.commit_hash }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Get commit hash
-        id: get_commit
-        run: echo "commit_hash=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+  # commit-hash:
+  #   runs-on: ubuntu-24.04
+  #   outputs:
+  #     commit_hash: ${{ steps.get_commit.outputs.commit_hash }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Get commit hash
+  #       id: get_commit
+  #       run: echo "commit_hash=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
 
   # build-and-test:
   #   runs-on: ubuntu-24.04
@@ -35,19 +35,19 @@ jobs:
   #       run: npm run build
 
   build-and-push-image:
-    needs:
+    # needs:
       # - build-and-test
-      - commit-hash
+      # - commit-hash
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set short git commit SHA
-        id: vars
-        run: |
-          calculatedSha=$(git rev-parse --short ${{ github.sha }})
-          echo "COMMIT_SHORT_SHA=$calculatedSha" >> $GITHUB_ENV
+      # - name: Set short git commit SHA
+      #   id: vars
+      #   run: |
+      #     calculatedSha=$(git rev-parse --short ${{ github.sha }})
+      #     echo "COMMIT_SHORT_SHA=$calculatedSha" >> $GITHUB_ENV
 
       - name: Log in to Container registry
         uses: docker/login-action@v3        
@@ -57,16 +57,16 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: echo result
-        env:
-          commit_hash: ${{ needs.commit-hash.outputs.commit_hash }}
+        # env:
+          # commit_hash: ${{ needs.commit-hash.outputs.commit_hash }}
         run: echo "The commit hash is $commit_hash"
 
-      # - name: Build and push Docker image
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     context: .
-      #     push: true
-      #     tags: ghcr.io/${{ github.repository }}:${{ steps.get_commit.outputs.commit_hash }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository }}:${{ github.sha }}
 
   # deploy:
   #   runs-on: ubuntu-24.04
