--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,57 +9,43 @@ permissions:
   packages: write
 
 jobs:
-  # commit-hash:
-  #   runs-on: ubuntu-24.04
-  #   outputs:
-  #     commit_hash: ${{ steps.get_commit.outputs.commit_hash }}
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Get commit hash
-  #       id: get_commit
-  #       run: echo "commit_hash=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-
-  # build-and-test:
-  #   runs-on: ubuntu-24.04
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Setup Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: '20.x'
-  #     - name: Install dependencies
-  #       run: npm ci
-  #     - name: Run tests
-  #       run: npm test
-  #     - name: Build
-  #       run: npm run build
+  build-and-test:
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+      - name: Install dependencies
+        run: npm ci
+  #       - name: Run tests
+  #         run: npm test
+  #       - name: Build
+  #         run: npm run build
 
   build-and-push-image:
-    # needs:
-      # - build-and-test
-      # - commit-hash
+    needs:
+      - build-and-test
+
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # - name: Set short git commit SHA
-      #   id: vars
-      #   run: |
-      #     calculatedSha=$(git rev-parse --short ${{ github.sha }})
-      #     echo "COMMIT_SHORT_SHA=$calculatedSha" >> $GITHUB_ENV
-
       - name: Log in to Container registry
-        uses: docker/login-action@v3        
+        uses: docker/login-action@v3
         with:
           registry: https://ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: echo result
-        # env:
-          # commit_hash: ${{ needs.commit-hash.outputs.commit_hash }}
-        run: echo "The commit hash is $commit_hash"
+          # env:
+        # commit_hash: ${{ needs.commit-hash.outputs.commit_hash }}
+        run: | 
+          echo "The commit hash is ${{ github.repository }}"
+          echo "The commit hash is ${{ github }}"
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
