--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,19 +40,32 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: echo result
-          # env:
-        # commit_hash: ${{ needs.commit-hash.outputs.commit_hash }}
-        run: | 
-          echo "The commit hash is ${{ github.repository }}"
-          echo "The commit hash is ${{ github }}"
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: ghcr.io/${{ github.repository }}:${{ github.sha }}
+
+  prune-old-images:
+    needs:
+      - build-and-push-image
+
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Log in to Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: https://ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Remove old Docker images
+        uses: actions/delete-package-versions@v5
+        with:
+          package-name: 'xxx'
+          min-versions-to-keep: 2
+          package-type: 'docker'
 
   # deploy:
   #   runs-on: ubuntu-24.04
