--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -53,20 +53,19 @@ jobs:
 
     runs-on: ubuntu-24.04
     steps:
-      - name: Log in to Container registry
-        uses: docker/login-action@v3
-        with:
-          registry: https://ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Log in to Container registry
+#        uses: docker/login-action@v3
+#        with:
+#          registry: https://ghcr.io
+#          username: ${{ github.actor }}
+#          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Remove old Docker images
         uses: actions/delete-package-versions@v5
         with:
-          package-name: 'xxx'
-          owner: 'bpf-net'
+          package-name: xxx
           min-versions-to-keep: 2
-          package-type: 'container'
+          package-type: container
 
   # deploy:
   #   runs-on: ubuntu-24.04
